--- a/package.json
+++ b/package.json
@@ -10,22 +10,24 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "nuxt": "^3.14.1",
     "@nuxtjs/tailwindcss": "^6.11.4",
-    "@tailwindcss/typography": "^0.5.10", 
-    "pdf-lib": "^1.17.1", 
-    "pdfjs-dist": "3.11.174",
-    "dropzone": "^6.0.0-beta.2",
+    "@tailwindcss/typography": "^0.5.10",
     "@vueuse/core": "^10.7.0",
-    "vuedraggable": "^4.1.0",
-    "vue": "^3.3.4"
+    "click-outside-vue3": "^4.0.1",
+    "dropzone": "^6.0.0-beta.2",
+    "mitt": "^3.0.1",
+    "nuxt": "^3.14.1",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "3.11.174",
+    "vue": "^3.3.4",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
+    "@types/dropzone": "^5.7.8",
     "@types/node": "^20.11.28",
+    "@vue/compiler-sfc": "^3.3.4",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "@types/dropzone": "^5.7.8",
-    "@vue/compiler-sfc": "^3.3.4"
+    "tailwindcss": "^3.4.1"
   }
 }
